plugins {
    id 'java'
    id 'java-library'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'fr.ensta-bretagne'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url="https://jitpack.io" }
}

java {
    modularity.inferModulePath = true
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(23))
    }
}

javafx {
    version = "23"
    modules = [ 'javafx.controls', 'javafx.swing' ]
}

dependencies {
    // Icons sets (see http://aalmiray.github.io/ikonli)
    implementation 'org.kordamp.ikonli:ikonli-javafx:2.1.1'
    implementation 'org.kordamp.ikonli:ikonli-material-pack:2.1.1'
    implementation 'org.kordamp.ikonli:ikonli-typicons-pack:2.1.1'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    api project(':obp3-object-browser-api')
}

test {
    useJUnitPlatform()
}

